# speer_takehome

./: Cargo.toml  README.md
dns_app/: Cargo.toml
dns_app/src/: app_state.rs  dns_value.rs  lib.rs  live_dns_entry.rs
dns_dto/: Cargo.toml
dns_dto/src/: add_dns_record_request_dto.rs  add_dns_record_response_dto.rs  delete_dns_record_request_dto.rs  dns_record_dto.rs  dns_record_list_dto.rs  dns_record_list_responsedto.rs  lib.rs  resolve_hostname_request_dto.rs
dns_server/: Cargo.toml
dns_server/src/: add_dns_record_handler.rs  delete_dns_record_handler.rs  dns_error.rs  lib.rs  list_dns_records_for_hostname_handler.rs  main.rs  path_parameters.rs  resolve_hostname_handler.rs
dns_server/tests/: setup.rs  test_add_dns_record.rs
dns_types/: Cargo.toml
dns_types/src/: hostname.rs  ipv4_address.rs  lib.rs
