[package]
name = "dns_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-macros = "0.5.1"
serde =  { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
log = "0.4.24"
tower = "0.5.2"
tower-http = {version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.23", features=["env-filter"]}
serde_with = "3.18.0"
dns_types = { path = "../dns_types" }
dns_app = {path = "../dns_app"}
dns_dto = {path = "../dns_dto"}
